--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "webpack --config webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Lauwrentius Margetan",
   "license": "ISC",
-  "description": "",
+  "description": "Udacity Meighborhood Map Project",
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
